ros2/log/build_2024-07-01_13-40-39/pointcloud_publisher/stderr.log
  File "/home/athul/Landing-Assist-Module-LAM/ros2/install/pointcloud_publisher/lib/python3.8/site-packages/pointcloud_publisher/unreal_ransac.py", line 69
    # Check if the
                 ^
SyntaxError: unexpected EOF while parsing

